# squad-tool-deployer

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
