[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squad-tool-deployer"
version = "1.0.0"
description = "Squad Tool Deployer - Manage and deploy tools across all squad agents"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "OpenSeneca", email = "squad@openseneca.org"}
]
keywords = ["squad", "deployment", "tools", "openseneca", "agents"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
squad-tool-deployer = "main:main"

[project.urls]
Homepage = "https://github.com/OpenSeneca/squad-tool-deployer"
Repository = "https://github.com/OpenSeneca/squad-tool-deployer"
Issues = "https://github.com/OpenSeneca/squad-tool-deployer/issues"

[tool.setuptools]
py-modules = ["main"]
